Fix flower scale and moon-text overlapping on iPhone

--- a/style.css
+++ b/style.css
@@ -2420,10 +2420,10 @@ h1 {
     }
 
     .moon {
-        top: 2rem !important;
-        right: 5% !important;
-        width: 60px !important;
-        height: 60px !important;
+        top: 1rem !important;
+        right: 1rem !important;
+        width: 50px !important;
+        height: 50px !important;
     }
 
     .subtext {
@@ -2432,8 +2432,9 @@ h1 {
     }
 
     .flowers {
-        transform: scale(0.5) !important;
-        margin-bottom: -100px !important;
+        transform: scale(0.7) !important;
+        /* Bigger flowers */
+        margin-bottom: -120px !important;
         bottom: 0 !important;
     }
 
